--- a/frontend/pages/login.html
+++ b/frontend/pages/login.html
@@ -13,11 +13,11 @@
         }
         .container {
             height: 100%;
-            background: radial-gradient(circle, #183f5b, #245170);
+            background: radial-gradient(circle, #3e5a87 ,#a3a9cf, #e7eaf5);
         }
         .login-wrapper {
-            box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
-            background-color: #0e2b41;
+            box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
+            background-color: #1d3f64;
             width: 360px;
             height: 300px;
             border-radius: 15px;
@@ -49,7 +49,7 @@
             padding:10px;
             width: 100%;
             margin-top: 40px;
-            background: radial-gradient(circle, #183f5b, #245170);
+            background: radial-gradient(circle, #3e5a87 ,#a3a9cf, #e7eaf5);
             color: white;
         }
         .msg {
@@ -59,12 +59,12 @@
         }
         a {
             text-decoration-line: underline;
-            color: #f9d649;
+            color: #1d3f64;
             font-weight: bold;
         }
         body {
             height: 100%;
-            background: radial-gradient(circle, #183f5b, #245170);
+            background: radial-gradient(circle, #3e5a87 ,#a3a9cf, #e7eaf5);
         }
     </style>
 </head>
