--- a/frontend/pages/login.html
+++ b/frontend/pages/login.html
@@ -14,6 +14,10 @@
                 <input type="text" name="username" placeholder="username" class="input-item">
                 <input type="password" name = "password" placeholder="password" class="input-item">
                 <div class="btn">Login</div>
+                <div class="btn_transparent">
+                    <a href="http://localhost:63342/web/frontend/pages/mainpage.html?_ijt=3ldflbrcrtnesd2ga1m9opoe2o&_ij_reload=RELOAD_ON_SAVE">Login
+                    </a>
+                </div>
             </div>
             <div class="msg">
                 Don't have an account?
